--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <div id="gamewindow" />
+    <div
+      id="app"
+      class="bg-zinc-950 w-screen h-screen flex justify-center items-center"
+    >
+      <div
+        id="gamewindow"
+        class="shadow-lg rounded border border-zinc-700 overflow-hidden"
+      />
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
